Add MCP sampling tools and processor demo
- Add McpSamplingTools with 3 sampling-enabled tools that use
  exchange.createMessage() to request AI completions from the client:
  explainCommission, analyzeDispute, summarizeSalesPerformance
- Register sampling tools as SyncToolSpecification beans (requires
  McpSyncServerExchange, cannot use @Tool annotation)
- Add spring-ai-starter-mcp-server dependency for STDIO transport
- Add VerticalSliceProcessor demo 8: MCP Sampling walkthrough
- Update demo runner from 7 to 8 demos
- Total MCP tools: 34 (31 standard + 3 sampling)
- Add claude-code-spec feature specifications